Added an actual post.

--- a/post.html
+++ b/post.html
@@ -76,17 +76,17 @@
           <div class="col-lg-8 col-md-10 mx-auto">
             <p>Greetings from Stanberg, Germany</p>
 
-<p><b>Disclaimer[1]:</b> This "site" is under mainatanence. I did something quick and dirty using <a href ="http://getbootstrap.com/">Bootstrap</a>, but I plan to use Jekyll in the future to make this site more robust.</p>
+<p><b>Disclaimer[1]:</b> This "site" is under mainatanence. I did something quick and dirty using <a href ="http://getbootstrap.com/">Bootstrap</a>, but I plan to use Jekyll in the future to make this site more robust.  </p>
 
 <p><b>Disclaimer[2]:</b> I like long walks on the beach, roses, strawberries dipped in chocolate...I'm kidding. Sand gets everywhere and roses die quickly. I do love chocolate though...</p>
 
 <p>OK, I've now wasted probably a healthy minute of your time. My goal is complete. </p>
 
-<p>I am creating this blog as a way to keep some folks up-to-date on what I am doing while I am in Germany. I am not going to pretent that my life is particularly interesting. And in fact, I have some reservations about making this as I don't want to come off as a narcissist. If any content I post starts to meander in that direction, please let me know.</p> 
+<p>I am creating this blog as a way to keep some folks up-to-date on what I am doing while I am in Germany. I am not going to pretend that my life is particularly interesting. In fact, I have some reservations about making this as I don't want to come off as a narcissist and/or make people feel as if my life is worth blogging about.</p> 
 
-<p>The purpose of this blog is this: While I am away I want to be able to share my life with those close to me. I hope this platform can: keep folks "in the loop" with what I am up to, University life (besides being poor and picking up unhealthy habits *laughsobs*),things that stand out to me as a Californian living in Germany, and whatever seems worth writing up. Ideally, I would be able to have these conversations with you all in person over lunch, baking, long walks on the beach, etc., but I understand that the time zone difference, in addition to that fact that you all have your own lives to live, will make that difficult.</p>
+<p>The purpose of this blog is this: While I am away I want to be able to share my life with those close to me. I hope this platform can: keep folks "in the loop" with what I am up to, inform future interested parties of University life (besides being poor and picking up unhealthy habits *laughsobs*) in Germany for "higher education",things that stand out to me as a Californian living in Germany, and whatever seems worth writing about. Ideally, I would have these conversations with you all in person over lunch, baking, long walks on the beach, etc., but I understand that the time zone difference, in addition to that fact that you all have your own lives to live, will make that difficult.</p>
 
-<p>Two years will go by fast. I am looking forward to seeing you all again soon.</p>
+<p>That being said, two years will go by fast. I am looking forward to seeing you all again soon saying absurd things in person.</p>
 
 <p>Sincerely,<br>
 N. Grayson
