--- a/post.html
+++ b/post.html
@@ -53,7 +53,7 @@
     </nav>
 
     <!-- Page Header -->
-    <header class="masthead" style="background-image: url('img/lmu_firstimpression.jpg')">
+    <header class="masthead" style="background-image: url('img/2014-06-30 21.12.11.jpg')">
       <div class="container">
         <div class="row">
           <div class="col-lg-8 col-md-10 mx-auto">
