--- a/contact.html
+++ b/contact.html
@@ -70,7 +70,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
-          <p>Want to get in touch with me? Fill out the form below to send me a message and I will try to get back to you within 24 hours!</p>
+          <p>Want to get in touch but you don't have my email and are frustrated with my lack of replies to social media? Fill out the form below to send me a message and I reply to you faster than via pigeon or snail mail.</p>
           <!-- Contact Form - Enter your email address on line 19 of the mail/contact_me.php file to make this form work. -->
           <!-- WARNING: Some web hosts do not allow emails to be sent through forms to common mail hosts like Gmail or Yahoo. It's recommended that you use a private domain email address! -->
           <!-- NOTE: To use the contact form, your site must be on a live web host with PHP! The form will not work locally! -->
@@ -89,12 +89,16 @@
                 <p class="help-block text-danger"></p>
               </div>
             </div>
+
+<!--
             <div class="control-group">
               <div class="form-group col-xs-12 floating-label-form-group controls">
                 <label>Phone Number</label>
                 <input type="tel" class="form-control" placeholder="Phone Number" id="phone" required data-validation-required-message="Please enter your phone number.">
                 <p class="help-block text-danger"></p>
               </div>
+-->
+
             </div>
             <div class="control-group">
               <div class="form-group floating-label-form-group controls">
