--- a/contact.html
+++ b/contact.html
@@ -70,7 +70,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
-          <p>Want to get in touch but you don't have my email and are frustrated with my lack of replies to social media? Fill out the form below to send me a message and I reply to you faster than via pigeon or snail mail.</p>
+          <p>Want to get in touch but you don't have my email and are frustrated with my lack of replies via social media? Fill out the form below to send me a message and I will reply to you faster than via pigeon or snail mail.</p>
           <!-- Contact Form - Enter your email address on line 19 of the mail/contact_me.php file to make this form work. -->
           <!-- WARNING: Some web hosts do not allow emails to be sent through forms to common mail hosts like Gmail or Yahoo. It's recommended that you use a private domain email address! -->
           <!-- NOTE: To use the contact form, your site must be on a live web host with PHP! The form will not work locally! -->
