Change sub title

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           <div class="col-lg-8 col-md-10 mx-auto">
             <div class="site-heading">
               <h1>Queer Journey</h1>
-              <span class="subheading">Another Ubiquitous Blog By Another Twenty-Something</span>
+              <span class="subheading">Ubiquitous Blog By Another Twenty-Something</span>
             </div>
           </div>
         </div>
