--- a/post.html
+++ b/post.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Queer Journey</title>
+    <title>Queer Journey: Home</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -76,15 +76,18 @@
 
             <p>Greetings from Somewhere in Germany,</p>
 
-            <p><b>Disclaimer[1]:</b> This "site" is under mainatanence. I did something quick and dirty using <a href ="http://getbootstrap.com/">Bootstrap</a>, but I plan to put this under Jekyll control later. So apologies in advance for potentially non-uniform pages.</p>
+            <p><b>Disclaimer[1]:</b> This "site" is under mainatanence. I did something quick and dirty using <a href ="http://getbootstrap.com/">Bootstrap</a> to get something up fast. My plan is to make the site more robust which involves putthing this under Jekyll control at some point.</p>
 
             <p><b>Disclaimer[2]:</b> I like long walks on the beach, roses, strawberries dipped in chocolate...I'm kidding. Sand gets everywhere and roses die quickly. I do love chocolate though...</p>
 
             <p>OK, I've now wasted probably a healthy minute of your time. My goal is complete. </p>
 
-            <p>I am creating this blog as a way to keep some folks up-to-date on what I am doing while I am in Germany. I am not going to pretend that my life is particularly interesting. In fact, I have some reservations about making this as I don't want to come off as a narcissist and/or make people feel as if my life is worth blogging about.</p> 
+            <p>I am creating this blog as a way to keep some folks up-to-date while I am away from the West Coast. 
+            It should be noted that I do not think my life is particularly interesting. In fact, I have some reservations about making a personal website. I do not want to come off as a narcissist and/or give off the impression I am full of myself.</p> 
 
-            <p>The purpose of this blog is this: While I am away I want to be able to share my life with those close to me. I hope this platform can: keep folks "in the loop" with what I am up to, provide insight to interested parties of University (besides being poor and picking up unhealthy habits *laughsobs*) in Germany for "higher education", things that stand out to me as a Californian living in Germany, and whatever seems worth writing about. Honestly, I would rather have these conversations with you all in person over lunch, baking, long walks on the beach, etc., but I understand that the time zone differences, in addition to that fact that you all have your own lives to live, will make that difficult.</p>
+            <p>The purpose of this blog is this: while I am away I want to be able to share my life with those close to me. I hope this platform of communication can: keep folks "in the loop" with what I am up to, provide insight to University life (besides being poor and developing unhealthy habits *laughsobs*), things that stand out to me as a native Californian living in Germany, and whatever seems worth writing about Germany. (I might provide information on research-related topics as well when that starts rolling around.)</p> 
+
+            <p>Honestly, I would rather have these conversations with you all in person over lunch, baking, long walks on the beach, etc., but I understand that time zone differences, in addition to that fact that you all have your own lives to live, will make that difficult for a while.</p>
 
             <p>That being said, two years will go by fast. I am looking forward to seeing you all again soon.</p>
 
