--- a/about.html
+++ b/about.html
@@ -70,9 +70,28 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe nostrum ullam eveniet pariatur voluptates odit, fuga atque ea nobis sit soluta odio, adipisci quas excepturi maxime quae totam ducimus consectetur?</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius praesentium recusandae illo eaque architecto error, repellendus iusto reprehenderit, doloribus, minus sunt. Numquam at quae voluptatum in officia voluptas voluptatibus, minus!</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum molestiae debitis nobis, quod sapiente qui voluptatum, placeat magni repudiandae accusantium fugit quas labore non rerum possimus, corrupti enim modi! Et.</p>
+          
+            <p>Greetings from Starnberg in Germany,</p>
+
+            <p><b>Disclaimer[1]:</b> This "site" is under maintenance. I did something quick and dirty using <a href ="http://getbootstrap.com/">Bootstrap</a> to get something up fast. My plan is to make the site more robust which involves putting this under <a href="https://jekyllrb.com/">Jekyll's</a> control at some point.</p>
+
+            <p><b>Disclaimer[2]:</b> I like long walks on the beach, roses, strawberries dipped in chocolate...I'm kidding. Sand gets everywhere and roses die quickly. I do love chocolate though...</p>
+
+            <p>OK, I've now wasted probably a healthy minute of your time. My goal is complete. </p>
+
+            <p>I am creating this blog as a way to keep some folks up-to-date while I am away from the West Coast. 
+            It should be noted that I do not think my life is particularly interesting. In fact, I have some reservations about making a personal website. I do not want to come off as a narcissist and/or give off the impression I am full of myself.</p> 
+
+            <p>The purpose of this blog is this: while I am away I want to be able to share my life with those close to me. I hope this platform of communication can: keep folks "in the loop" with what I am up to, provide insight to University life (besides being poor and developing unhealthy habits *laughsobs*), things that stand out to me as a native Californian living in Germany, and whatever seems worth writing about Germany. (I might provide information on research-related topics as well when that starts rolling around.)</p> 
+
+            <p>Honestly, I would rather have these conversations with you all in person over lunch, baking, long walks on the beach, etc., but I understand that time zone differences, in addition to that fact that you all have your own lives to live, will make that difficult for a while.</p>
+
+            <p>That being said, two years will go by fast. I am looking forward to seeing you all again soon.</p>
+
+            <p>Sincerely,<br>
+            N. Grayson</p>
+        
+
         </div>
       </div>
     </div>
