--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
         <div class="row">
           <div class="col-lg-8 col-md-10 mx-auto">
             <div class="site-heading">
-              <h1>Queer Journey</h1>
-              <span class="subheading">Ubiquitous Blog By Another Twenty-Something</span>
+              <h1>A Queer Journey</h1>
+              <span class="subheading">An Ubiquitous Blog By Another Twenty-Something</span>
             </div>
           </div>
         </div>
