--- a/about.html
+++ b/about.html
@@ -58,8 +58,8 @@
         <div class="row">
           <div class="col-lg-8 col-md-10 mx-auto">
             <div class="page-heading">
-              <h1>About Me</h1>
-              <span class="subheading">This is what I do.</span>
+              <h1>Why Did I Create This?</h1>
+              <span class="subheading">Background on what inspired me to create a site.</span>
             </div>
           </div>
         </div>
