Changed Navigation Bar

--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
-        <a class="navbar-brand" href="index.html">Start Bootstrap</a>
+<!--        <a class="navbar-brand" href="index.html">Start Bootstrap</a>-->
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           Menu
           <i class="fa fa-bars"></i>
@@ -42,7 +42,7 @@
               <a class="nav-link" href="about.html">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="post.html">Sample Post</a>
+              <a class="nav-link" href="post.html">Blog Post</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="contact.html">Contact</a>
@@ -58,7 +58,7 @@
         <div class="row">
           <div class="col-lg-8 col-md-10 mx-auto">
             <div class="page-heading">
-              <h1>Why Did I Create This?</h1>
+              <h1>About</h1>
               <span class="subheading">Background on what inspired me to create a site.</span>
             </div>
           </div>
@@ -71,7 +71,7 @@
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
           
-            <p>Greetings from Starnberg in Germany,</p>
+            <p>Greetings from Somewhere in Germany,</p>
 
             <p><b>Disclaimer[1]:</b> This "site" is under maintenance. I did something quick and dirty using <a href ="http://getbootstrap.com/">Bootstrap</a> to get something up fast. My plan is to make the site more robust which involves putting this under <a href="https://jekyllrb.com/">Jekyll's</a> control at some point.</p>
 
