--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Clean Blog - Start Bootstrap Theme</title>
+    <title>A Queer Journey:: About</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -58,7 +58,7 @@
         <div class="row">
           <div class="col-lg-8 col-md-10 mx-auto">
             <div class="page-heading">
-              <h1>About</h1>
+              <h1>Why Did I Create This?</h1>
               <span class="subheading">Background on what inspired me to create a site.</span>
             </div>
           </div>
