New logo on homepage, changed contact form

--- a/contact.html
+++ b/contact.html
@@ -58,8 +58,8 @@
         <div class="row">
           <div class="col-lg-8 col-md-10 mx-auto">
             <div class="page-heading">
-              <h1>Contact Me</h1>
-              <span class="subheading">Have questions? I have answers (maybe).</span>
+              <h1>Contact</h1>
+              <span class="subheading">A couple of ways to get a hold of me.</span>
             </div>
           </div>
         </div>
@@ -70,11 +70,25 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
-          <p>Want to get in touch but you don't have my email and are frustrated with my lack of replies via social media? Fill out the form below to send me a message and I will reply to you faster than via pigeon or snail mail.</p>
+          <p>Want to get in touch but you don't have my email and are frustrated with my lack of replies via social media? Send me a message and I will reply to you faster than via pigeon or snail mail.</p>
+
+          <p><b>Title:</b><br>Graduate Student</p>
+
+          <p><b>Email:<b><br>nluna {@} berkeley.edu</p>
+
+          <b>Address</b>
+          <p>Department of Earth and Environmental Sciences<br>
+          Geophysics<br>
+          Munich University<br>
+          Theresienstr. 41<br>
+          80333 Munich<br>
+          Germany</p>
+          
+
           <!-- Contact Form - Enter your email address on line 19 of the mail/contact_me.php file to make this form work. -->
           <!-- WARNING: Some web hosts do not allow emails to be sent through forms to common mail hosts like Gmail or Yahoo. It's recommended that you use a private domain email address! -->
           <!-- NOTE: To use the contact form, your site must be on a live web host with PHP! The form will not work locally! -->
-          <form name="sentMessage" id="contactForm" novalidate>
+ <!--         <form name="sentMessage" id="contactForm" novalidate>
             <div class="control-group">
               <div class="form-group floating-label-form-group controls">
                 <label>Name</label>
@@ -90,7 +104,6 @@
               </div>
             </div>
 
-<!--
             <div class="control-group">
               <div class="form-group col-xs-12 floating-label-form-group controls">
                 <label>Phone Number</label>
@@ -98,7 +111,7 @@
                 <p class="help-block text-danger"></p>
               </div>
             </div>
--->
+
             <div class="control-group">
               <div class="form-group floating-label-form-group controls">
                 <label>Message</label>
@@ -115,7 +128,7 @@
         </div>
       </div>
     </div>
-
+-->
     <hr>
 
     <!-- Footer -->
