Fixed text on Contact page

--- a/contact.html
+++ b/contact.html
@@ -70,14 +70,14 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
-          <p>Want to get in touch but you don't have my email and are frustrated with my lack of replies via social media? Send me a message and I will reply to you faster than via pigeon or snail mail.</p>
+          <p>Send me a message and I will reply to you faster than via pigeon or snail mail.</p>
 
           <p><b>Title:</b><br>Graduate Student</p>
 
-          <p><b>Email:<b><br>nluna {@} berkeley.edu</p>
+          <p><b>Email:</b><br>nluna {@} berkeley.edu</p>
 
-          <b>Address</b>
-          <p>Department of Earth and Environmental Sciences<br>
+          <p><b>Address:</b><br>
+          Department of Earth and Environmental Sciences<br>
           Geophysics<br>
           Munich University<br>
           Theresienstr. 41<br>
