--- a/contact.html
+++ b/contact.html
@@ -59,7 +59,7 @@
           <div class="col-lg-8 col-md-10 mx-auto">
             <div class="page-heading">
               <h1>Contact</h1>
-              <span class="subheading">A couple of ways to get a hold of me.</span>
+              <span class="subheading">Send me a message and I will reply to you faster than via snail mail.</span>
             </div>
           </div>
         </div>
@@ -70,7 +70,6 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
-          <p>Send me a message and I will reply to you faster than via pigeon or snail mail.</p>
 
           <p><b>Title:</b><br>Graduate Student</p>
 
