--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
           <div class="col-lg-8 col-md-10 mx-auto">
             <ul class="list-inline text-center">
               <li class="list-inline-item">
-                <a href="www.linkedin.com/in/noah-luna-linked">
+                <a href="https://www.linkedin.com/in/noah-luna-linked/">
                   <span class="fa-stack fa-lg">
                     <i class="fa fa-circle fa-stack-2x"></i>
                     <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
