--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>A Queer Journey:: About</title>
+    <title>A Queer Journey: About</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -58,7 +58,7 @@
         <div class="row">
           <div class="col-lg-8 col-md-10 mx-auto">
             <div class="page-heading">
-              <h1>Why Did I Create This?</h1>
+              <h1>Why A Website?</h1>
               <span class="subheading">Background on what inspired me to create a site.</span>
             </div>
           </div>
@@ -71,25 +71,29 @@
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
           
-            <p>Greetings from Somewhere in Germany,</p>
+ <p>Greetings from Germany,</p>
 
-            <p><b>Disclaimer[1]:</b> This "site" is under maintenance. I did something quick and dirty using <a href ="http://getbootstrap.com/">Bootstrap</a> to get something up fast. My plan is to make the site more robust which involves putting this under <a href="https://jekyllrb.com/">Jekyll's</a> control at some point.</p>
+<p>”Why did you create a website? Seems a bit excessive, no?”</p>
 
-            <p><b>Disclaimer[2]:</b> I like long walks on the beach, roses, strawberries dipped in chocolate...I'm kidding. Sand gets everywhere and roses die quickly. I do love chocolate though...</p>
+<p>Yes and no. The idea of sharing what I am doing in my life via the interwebs is something I have mixed feelings about. I am a moderately closed person who does not fancy making themselves the center of attention.<p>
 
-            <p>OK, I've now wasted probably a healthy minute of your time. My goal is complete. </p>
+<p>However, I thoroughly enjoy listening to close friends about their lives and I often find myself opening up about myself as a result.</p>
 
-            <p>I am creating this blog as a way to keep some folks up-to-date while I am away from the West Coast. 
-            It should be noted that I do not think my life is particularly interesting. In fact, I have some reservations about making a personal website. I do not want to come off as a narcissist and/or give off the impression I am full of myself.</p> 
+<p>Making and maintaining friends is a sort of “relationship”.  I know nothing of relationships (nervous laughter) but I can not imagine maintaining a friendship if I disappear for two years and can’t serve as an earn or person to lean on.</p>
 
-            <p>The purpose of this blog is this: while I am away I want to be able to share my life with those close to me. I hope this platform of communication can: keep folks "in the loop" with what I am up to, provide insight to University life (besides being poor and developing unhealthy habits *laughsobs*), things that stand out to me as a native Californian living in Germany, and whatever seems worth writing about Germany. (I might provide information on research-related topics as well when that starts rolling around.)</p> 
+<p>So, this blog is for you. I want to share my life with you all while an ocean stands in between. I hope this platform of communication can keep folks "in the loop" with what I am up to. <p> 
 
-            <p>Honestly, I would rather have these conversations with you all in person over lunch, baking, long walks on the beach, etc., but I understand that time zone differences, in addition to that fact that you all have your own lives to live, will make that difficult for a while.</p>
+<p>To shift the focus off myself I will also explore and try to provide: insight to University life (besides being poor and developing unhealthy habits *laughsobs*) in Germany, information on cultural differences between Californians and Bavarians, research I am working on, and whatever seems worth writing about.<p> 
 
-            <p>That being said, two years will go by fast. I am looking forward to seeing you all again soon.</p>
+<p>Honestly, I would rather have these conversations with you all in person over lunch, baking, long walks on the beach, etc., but I understand that time zone differences, in addition to that fact that you all have your own lives to live, will make that difficult for a while.</p>
 
-            <p>Sincerely,<br>
-            N. Grayson</p>
+<p>That being said, two years will go by fast. I look forward to seeing you all again soon.</p>
+
+<p>Sincerely,<br>Grayson</p>
+
+
+<p><b>Disclaimer:</b> This "site" is under maintenance. I did something quick and dirty using <a href ="http://getbootstrap.com/">Bootstrap</a> to get something up fast. My plan is to make the site more robust which involves putting this under <a href="https://jekyllrb.com/">Jekyll's</a> control at some point.</p>
+
         
 
         </div>
