--- a/about.html
+++ b/about.html
@@ -73,21 +73,19 @@
           
  <p>Greetings from Germany,</p>
 
-<p>”Why did you create a website? Seems a bit excessive, no?”</p>
+<p><b>You:</b>”Why did you create a website? Seems a bit excessive, no?”</p>
 
 <p>Yes and no. The idea of sharing what I am doing in my life via the interwebs is something I have mixed feelings about. I am a moderately closed person who does not fancy making themselves the center of attention.<p>
 
-<p>However, I thoroughly enjoy listening to close friends about their lives and I often find myself opening up about myself as a result.</p>
+<p>That being said, I can not imagine maintaining friendships if I am not able to listen and/or share life experiences, thoughts, feelings, etc. with you all. It is a necessary component of maintaining a friendship. My current location will make it difficult to engage as often as I would like with you all.</p>
 
-<p>Making and maintaining friends is a sort of “relationship”.  I know nothing of relationships (nervous laughter) but I can not imagine maintaining a friendship if I disappear for two years and can’t serve as an earn or person to lean on.</p>
-
-<p>So, this blog is for you. I want to share my life with you all while an ocean stands in between. I hope this platform of communication can keep folks "in the loop" with what I am up to. <p> 
+<p>This blog is for you. I want to share my life with you all while an ocean stands in between. I hope this platform of communication can keep folks "in the loop" with what I am up to and hopefully inspire you to let me know how you are doing and/or say "Hi". <p> 
 
 <p>To shift the focus off myself I will also explore and try to provide: insight to University life (besides being poor and developing unhealthy habits *laughsobs*) in Germany, information on cultural differences between Californians and Bavarians, research I am working on, and whatever seems worth writing about.<p> 
 
 <p>Honestly, I would rather have these conversations with you all in person over lunch, baking, long walks on the beach, etc., but I understand that time zone differences, in addition to that fact that you all have your own lives to live, will make that difficult for a while.</p>
 
-<p>That being said, two years will go by fast. I look forward to seeing you all again soon.</p>
+<p>Two years will go by fast. I look forward to seeing you all again soon.</p>
 
 <p>Sincerely,<br>Grayson</p>
 
