--- a/about.html
+++ b/about.html
@@ -73,13 +73,13 @@
           
  <p>Greetings from Germany,</p>
 
-<p><b>You:</b>”Why did you create a website? Seems a bit excessive, no?”</p>
+<p><b>You:</b> ”Why did you create a website? Seems a bit excessive, no?”</p>
 
 <p>Yes and no. The idea of sharing what I am doing in my life via the interwebs is something I have mixed feelings about. I am a moderately closed person who does not fancy making themselves the center of attention.<p>
 
-<p>That being said, I can not imagine maintaining friendships if I am not able to listen and/or share life experiences, thoughts, feelings, etc. with you all. It is a necessary component of maintaining a friendship. My current location will make it difficult to engage as often as I would like with you all.</p>
+<p>That being said, I can not imagine maintaining friendships if I am not able to listen and/or share life experiences, thoughts, feelings, etc. with you all. (An arguably necessary component of maintaining a friendship.) Sadly, my current location will make that difficult for a while for both sides.</p>
 
-<p>This blog is for you. I want to share my life with you all while an ocean stands in between. I hope this platform of communication can keep folks "in the loop" with what I am up to and hopefully inspire you to let me know how you are doing and/or say "Hi". <p> 
+<p>This blog is for you. I want to share my life with you all while an ocean stands in between. I hope this platform of communication can keep folks "in the loop" with what I am up to.<p> 
 
 <p>To shift the focus off myself I will also explore and try to provide: insight to University life (besides being poor and developing unhealthy habits *laughsobs*) in Germany, information on cultural differences between Californians and Bavarians, research I am working on, and whatever seems worth writing about.<p> 
 
