--- a/index.html
+++ b/index.html
@@ -153,13 +153,14 @@
                 </a>
               </li>
               <li class="list-inline-item">
-                <a href="#">
+                <a href="https://github.com/ngrayluna">
                   <span class="fa-stack fa-lg">
                     <i class="fa fa-circle fa-stack-2x"></i>
                     <i class="fa fa-github fa-stack-1x fa-inverse"></i>
                   </span>
                 </a>
               </li>
+
               <li class="list-inline-item">
                 <a href="https://www.instagram.com/gray_on_moon/">
                   <span class="fa-stack fa-lg">
@@ -168,6 +169,16 @@
                   </span>
                 </a>
               </li>
+
+               <li class="list-inline-item">
+                <a href="#">
+                  <span class="fa-stack fa-lg">
+                    <i class="fa fa-circle fa-stack-2x"></i>
+                    <i class="fa fa-angel fa-stack-1x fa-inverse"></i>
+                  </span>
+                </a>
+              </li>
+
             </ul>
             <p class="copyright text-muted">Copyright &copy; 2017</p>
           </div>
