--- a/about.html
+++ b/about.html
@@ -71,23 +71,9 @@
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
           
- <p>Greetings from Germany,</p>
+ <p>Greetings from [insert country],</p>
 
-<p><b>You:</b> ”Why did you create a website? Seems a bit excessive, no?”</p>
-
-<p>Yes and no. The idea of sharing what I am doing in my life via the interwebs is something I have mixed feelings about. I am a moderately closed person who does not fancy making themselves the center of attention.<p>
-
-<p>That being said, I can not imagine maintaining friendships if I am not able to listen and/or share life experiences, thoughts, feelings, etc. with you all. (An arguably necessary component of maintaining a friendship.) Sadly, my current location will make that difficult for a while for both sides.</p>
-
-<p>This blog is for you. I want to share my life with you all while an ocean stands in between. I hope this platform of communication can keep folks "in the loop" with what I am up to.<p> 
-
-<p>To shift the focus off myself I will also explore and try to provide: insight to University life (besides being poor and developing unhealthy habits *laughsobs*) in Germany, information on cultural differences between Californians and Bavarians, research I am working on, and whatever seems worth writing about.<p> 
-
-<p>Honestly, I would rather have these conversations with you all in person over lunch, baking, long walks on the beach, etc., but I understand that time zone differences, in addition to that fact that you all have your own lives to live, will make that difficult for a while.</p>
-
-<p>Two years will go by fast. I look forward to seeing you all again soon.</p>
-
-<p>Sincerely,<br>Grayson</p>
+          <p>Blah.</p>
 
 
 <p><b>Disclaimer:</b> This "site" is under maintenance. I did something quick and dirty using <a href ="http://getbootstrap.com/">Bootstrap</a> to get something up fast. My plan is to make the site more robust which involves putting this under <a href="https://jekyllrb.com/">Jekyll's</a> control at some point.</p>
