--- a/contact.html
+++ b/contact.html
@@ -73,7 +73,7 @@
 
           <p><b>Title:</b><br>Graduate Student</p>
 
-          <p><b>Email:</b><br>nluna {@} berkeley.edu</p>
+          <p><b>Email:</b><br></p>
 
           <p><b>Address:</b><br>
           Department of Earth and Environmental Sciences<br>
