fixed missing links

--- a/index.html
+++ b/index.html
@@ -844,7 +844,7 @@ Currently looking into opportunities in Software Engineering. Open to new opport
 
     
     <div class="article-style">
-      In Part I we will cover the first steps of the machine learning pipeline: Framing the Problem, Retrieving the Data , Exploring and …
+      In Part I we covered the first steps of our machine learning pipeline: Framing the Problem, Retrieving the Data , Exploring and …
     </div>
     
 
