--- a/project/denoiser/index.html
+++ b/project/denoiser/index.html
@@ -715,7 +715,7 @@ Given their level of sensitivity, seismometers also pick up noise."><meta proper
 
 <hr />
 
-<h2><a name ="References"></a></h2>
+<h2><a name ="references">References</a></h2>
 
 <p>[1] Alan Richardson and Caelen Feller. &ldquo;Seismic data denoising and deblending using deep learning&rdquo;. (2019).</p>
 
