--- a/project/index.html
+++ b/project/index.html
@@ -391,9 +391,8 @@
     <h2><a href="/project/denoiser/">Removing Noise from Seismic Data with Denoising Autoencoders</a></h2>
     <div class="article-style">
       
-      From imaging the Earth&rsquo;s interior like a giant CT scan, to locating new oil reserves, to detecting earthquakes, seismic waves provide us with a unique glimpse into our Earth’s interior.
-To record these waves we use seismometers. Seismometers are highly sensitive instruments that typically measure translational ground motions. They are so sensitive that they are capable of measuring large, distant earthquakes from across the globe.
-Given their level of sensitivity, seismometers also pick up noise.
+      From imaging Earth’s interior to earthquake detection to oil discovery, seismic waves provide us with a unique approach to study our Earth.
+To record these waves we use seismometers. Seismometers are highly sensitive instruments that typically measure translational ground motions. These instruments are sensitive enough to measure large, distant earthquakes from across the globe. For example, a seismometer in California can detect a magnitude 7.0 or above earthquake in Chile, Japan and/or even Turkey!
       
     </div>
   </div>
