--- a/index.html
+++ b/index.html
@@ -1205,7 +1205,7 @@ What is a Recurrent …
       <h4><a href="/project/denoiser/" >Removing Noise from Seismic Data with Denoising Autoencoders</a></h4>
       
       <div class="article-style">
-        <p>From imaging Earth’s interior to earthquake detection to oil discovery, seismic waves provide us with a unique approach to study our …</p>
+        <p>From earthquake detection to oil discovery, seismic waves allow us to investigate Earth processes and its interior in ways no other …</p>
       </div>
       
     </div>
