--- a/project/denoiser/index.html
+++ b/project/denoiser/index.html
@@ -28,7 +28,7 @@
   
     
   
-  <meta name="description" content="From imaging Earth’s interior to earthquake detection to oil discovery, seismic waves provide us with a unique approach to study our Earth.
+  <meta name="description" content="From earthquake detection to oil discovery, seismic waves allow us to investigate Earth processes and its interior in ways no other data type can.
 To record these waves we use seismometers. Seismometers are highly sensitive instruments that typically measure translational ground motions. These instruments are sensitive enough to measure large, distant earthquakes from across the globe. For example, a seismometer in California can detect a magnitude 7.0 or above earthquake in Chile, Japan and/or even Turkey!">
 
   
@@ -112,7 +112,7 @@ To record these waves we use seismometers. Seismometers are highly sensitive ins
   <meta property="og:site_name" content="Gray Luna">
   <meta property="og:url" content="https://ngrayluna.github.io/project/denoiser/">
   <meta property="og:title" content="Removing Noise from Seismic Data with Denoising Autoencoders | Gray Luna">
-  <meta property="og:description" content="From imaging Earth’s interior to earthquake detection to oil discovery, seismic waves provide us with a unique approach to study our Earth.
+  <meta property="og:description" content="From earthquake detection to oil discovery, seismic waves allow us to investigate Earth processes and its interior in ways no other data type can.
 To record these waves we use seismometers. Seismometers are highly sensitive instruments that typically measure translational ground motions. These instruments are sensitive enough to measure large, distant earthquakes from across the globe. For example, a seismometer in California can detect a magnitude 7.0 or above earthquake in Chile, Japan and/or even Turkey!"><meta property="og:image" content="https://ngrayluna.github.io/project/denoiser/featured.jpg:png.png">
   <meta property="twitter:image" content="https://ngrayluna.github.io/project/denoiser/featured.jpg:png.png"><meta property="og:locale" content="en-us">
   
@@ -178,7 +178,7 @@ To record these waves we use seismometers. Seismometers are highly sensitive ins
       "url": "https://ngrayluna.github.io/img/icon-512.png"
     }
   },
-  "description": "From imaging Earth’s interior to earthquake detection to oil discovery, seismic waves provide us with a unique approach to study our Earth.\nTo record these waves we use seismometers. Seismometers are highly sensitive instruments that typically measure translational ground motions. These instruments are sensitive enough to measure large, distant earthquakes from across the globe. For example, a seismometer in California can detect a magnitude 7.0 or above earthquake in Chile, Japan and/or even Turkey!"
+  "description": "From earthquake detection to oil discovery, seismic waves allow us to investigate Earth processes and its interior in ways no other data type can.\nTo record these waves we use seismometers. Seismometers are highly sensitive instruments that typically measure translational ground motions. These instruments are sensitive enough to measure large, distant earthquakes from across the globe. For example, a seismometer in California can detect a magnitude 7.0 or above earthquake in Chile, Japan and/or even Turkey!"
 }
 </script>
 
@@ -588,7 +588,7 @@ To record these waves we use seismometers. Seismometers are highly sensitive ins
     <div class="article-style">
       
 
-<p><a name ="Intro">From imaging Earth’s interior to earthquake detection to oil discovery, seismic waves provide us with a unique approach to study our Earth.</a></p>
+<p><a name ="Intro">From earthquake detection to oil discovery, seismic waves allow us to investigate Earth processes and its interior in ways no other data type can.</a></p>
 
 <p>To record these waves we use seismometers. Seismometers are highly sensitive instruments that typically measure translational ground motions. These instruments are sensitive enough to measure large, distant earthquakes from across the globe. For example, a seismometer in California can detect a magnitude 7.0 or above earthquake in Chile, Japan and/or even  Turkey!</p>
 
