--- a/project/index.html
+++ b/project/index.html
@@ -391,7 +391,7 @@
     <h2><a href="/project/denoiser/">Removing Noise from Seismic Data with Denoising Autoencoders</a></h2>
     <div class="article-style">
       
-      From imaging Earth’s interior to earthquake detection to oil discovery, seismic waves provide us with a unique approach to study our Earth.
+      From earthquake detection to oil discovery, seismic waves allow us to investigate Earth processes and its interior in ways no other data type can.
 To record these waves we use seismometers. Seismometers are highly sensitive instruments that typically measure translational ground motions. These instruments are sensitive enough to measure large, distant earthquakes from across the globe. For example, a seismometer in California can detect a magnitude 7.0 or above earthquake in Chile, Japan and/or even Turkey!
       
     </div>
